Opened 16 years ago

Closed 16 years ago

#1833 closed bug (fixed)

Disk Icon disappears

Reported by: peat Owned by: aldeck
Priority: normal Milestone: R1
Component: Applications/Tracker Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: x86

Description

If you select Show DisksIcon then the icon appears correct on the Desktop. Now if you change the Icon Size (by right-click on Desktop) the DisksIcon disappears. By changing Tracker to Show Volumes and then back to DisksIcon the icon reappears. For me this is always reproducable. Btw i'm running on real hardware.

Change History (2)

comment:1 by aldeck, 16 years ago

Owner: changed from axeld to aldeck
Status: newassigned

comment:2 by aldeck, 16 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev25941

Note: See TracTickets for help on using tickets.